--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,18 @@
   "typescript.referencesCodeLens.enabled": true,
   "typescript.implementationsCodeLens.enabled": true,
   "editor.detectIndentation": false,
-  "typescript.preferences.quoteStyle": "single"
+  "typescript.preferences.quoteStyle": "single",
+  "cSpell.words": [
+    "banlist",
+    "Battl",
+    "BATTLEYE",
+    "bcpt",
+    "gamedata",
+    "ipss",
+    "logdip",
+    "nopb",
+    "novb",
+    "rcon",
+    "ucoun"
+  ]
 }
