--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cftools.js",
+  "name": "cftools",
   "version": "0.0.1",
   "description": "JavaScript implementation for the CFTools Data API.",
   "main": "index.js",
@@ -27,12 +27,14 @@
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "chai": "^4.3.7",
+    "dotenv": "^16.4.5",
     "eslint": "^8.27.0",
     "mocha": "^10.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.2",
     "ts-mocha": "^10.0.0",
     "ts-node-dev": "^2.0.0",
+    "type-fest": "^4.26.1",
     "typescript": "^4.8.4"
   },
   "repository": {
