--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,11 @@
     "bcpt",
     "gamedata",
     "ipss",
+    "keyv",
     "logdip",
     "nopb",
     "novb",
+    "queuepriority",
     "rcon",
     "ucoun"
   ]
