--- a/package.json
+++ b/package.json
@@ -2,21 +2,32 @@
   "name": "cftools",
   "version": "0.0.1",
   "description": "JavaScript implementation for the CFTools Data API.",
-  "main": "index.js",
+  "access": "public",
+  "main": "dist/index.js",
+  "types": "src/index.ts",
+  "publishConfig": {
+    "main": "dist/index.js",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.ts"
+  },
+  "files": [
+    "dist/**"
+  ],
   "scripts": {
     "clean:dist": "rimraf ./dist",
     "clean:modules": "rimraf ./node_modules",
     "clean": "npm run clean:dist && npm run clean:modules",
     "dev": "npm run start:dev",
     "lint": "npx eslint src/**/*.ts",
-    "lint:fix": "npx eslint --fix src/**/*.ts && npx eslint --fix test/**/*.ts",
+    "lint:fix": "npx eslint src/**/*.ts --fix && npx eslint test/**/*.ts --fix",
     "prebuild": "npm run clean:dist",
-    "build": "tsc",
-    "start": "node dist/src/index",
+    "build": "tsup",
+    "start": "node dist/index",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "pretest": "npm run build",
-    "test": "mocha dist/test/**/*.js",
-    "test:dev": "ts-mocha test/**/*.spec.ts -w --watch-files '**/*.ts'"
+    "test": "ts-mocha test/**/*.spec.ts",
+    "test:dev": "ts-mocha test/**/*.spec.ts -w --watch-files '**/*.ts'",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/chai": "^4.3.4",
@@ -34,12 +45,13 @@
     "sinon": "^14.0.2",
     "ts-mocha": "^10.0.0",
     "ts-node-dev": "^2.0.0",
+    "tsup": "^8.3.5",
     "type-fest": "^4.26.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.6.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/Mirasaki-Development/cftools.js.git"
+    "url": "https://github.com/Mirasaki-Development/cftools.js"
   },
   "keywords": [
     "cftools",
@@ -57,5 +69,10 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Mirasaki-Development/cftools.js/issues"
+  },
+  "dependencies": {
+    "cache-manager": "^6.1.2",
+    "keyv": "^5.1.3",
+    "lru-cache": "^11.0.2"
   }
 }
