--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,12 +51,16 @@ jobs:
       run: |
         tsh ssh mirasaki-development@md01.na01.mirasaki.dev << 'ENDSSH'
           cd /var/www/cftools.js
+          echo "Stashing any local changes..."
+          git stash
           echo "Pulling latest changes..."
           git pull origin main
           echo "Installing development dependencies..."
           npm install
           echo "Building the project's documentation..."
           npm run build:docs
+          echo "Applying local changes from stash..."
+          git stash pop
           exit
         ENDSSH
         
