--- a/package.json
+++ b/package.json
@@ -4,12 +4,8 @@
   "description": "JavaScript implementation for the CFTools Data API.",
   "access": "public",
   "main": "dist/index.js",
-  "types": "src/index.ts",
-  "publishConfig": {
-    "main": "dist/index.js",
-    "module": "dist/index.mjs",
-    "types": "dist/index.d.ts"
-  },
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/**"
   ],
