fix: update error types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,15 +9,24 @@
     "Battl",
     "BATTLEYE",
     "bcpt",
+    "bohemiainteractive",
+    "CFTOOLS",
+    "dayz",
     "gamedata",
+    "Gamelabs",
+    "gameserver",
+    "gamesession",
     "ipss",
+    "itemlist",
     "keyv",
     "logdip",
     "nopb",
     "novb",
     "queuepriority",
     "rcon",
+    "teleporting",
     "ucoun",
+    "unmuting",
     "WRDG"
   ]
 }
