--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,6 @@ version: 2
 updates:
   - package-ecosystem: "npm" # See documentation for possible values
     directory: "/" # Location of package manifests
-    target-branch: deps # Branch to create PRs against
+    target-branch: main # Branch to create PRs against
     schedule:
       interval: "weekly"
