--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.11",
   "description": "JavaScript implementation for the CFTools Data API.",
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com/"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
