--- a/.github/workflows/publish-node.yml
+++ b/.github/workflows/publish-node.yml
@@ -29,4 +29,4 @@ jobs:
       - run: npm run build
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}  # Use your npm token here
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
