--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "JavaScript implementation for the CFTools Data API.",
   "publishConfig": {
     "access": "public",
-    "registry": "https://npm.pkg.github.com/"
+    "registry": "https://registry.npmjs.org/"
   },
   "main": "dist/index.js",
   "module": "dist/index.mjs",
