--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mirasaki/cftools.js",
+  "name": "@md-oss/cftools.js",
   "version": "1.0.12",
   "description": "JavaScript implementation for the CFTools Data API.",
   "publishConfig": {
@@ -53,7 +53,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mirasaki-Development/cftools.js.git"
+    "url": "git+https://github.com/Mirasaki/cftools.js.git"
   },
   "keywords": [
     "cftools",
@@ -70,7 +70,7 @@
   },
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Mirasaki-Development/cftools.js/issues"
+    "url": "https://github.com/Mirasaki/cftools.js/issues"
   },
   "dependencies": {
     "cache-manager": "^6.1.2",
