chore: bump version to 1.1.0 and update dependencies
feat: enhance user agent handling in Authentication class
- Updated userAgent property to include application ID in its value.

fix: improve cache retrieval logic in CacheManager
- Changed condition to check for undefined instead of null.

refactor: modify user agent functions in library resolver
- Updated minimalUserAgent and userAgent to accept applicationId as parameter.

fix: correct protocolUsed mapping in transformers
- Adjusted handling of protocolUsed to account for typo in response.

fix: update country name keys in player list response transformer
- Standardized keys for Brazilian Portuguese and Chinese.

build: update tsup configuration for better output management
- Enabled source maps for development and adjusted output settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,24 +8,34 @@
     "banlist",
     "Battl",
     "BATTLEYE",
+    "battleyeguid",
     "bcpt",
     "bohemiainteractive",
+    "bohemiainteractiveuid",
     "CFTOOLS",
+    "cftoolsid",
     "dayz",
+    "dlcs",
     "gamedata",
     "Gamelabs",
     "gameserver",
     "gamesession",
+    "gametime",
+    "inheritdoc",
     "ipss",
     "itemlist",
+    "kdratio",
     "keyv",
     "logdip",
+    "missmatch",
     "nopb",
     "novb",
     "queuepriority",
     "rcon",
+    "sakhal",
     "teleporting",
     "ucoun",
+    "Unmute",
     "unmuting",
     "WRDG"
   ]
