--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "up:major": "npx npm-check-updates@latest -u && npm install"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.2",
     "@types/chai": "^5.2.3",
     "@types/lodash": "^4.17.23",
     "@types/mocha": "^10.0.10",
@@ -43,6 +45,7 @@
     "chai": "^6.2.2",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "mocha": "^11.7.5",
     "rimraf": "^6.1.2",
     "sinon": "^21.0.1",
